k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-money-tracker
  namespace: money-tracker
  labels:
    app: money-tracker
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # ← Disable nginx SSL redirect
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - money-tracker.fitrie-server.xyz
    secretName: money-tracker-tls
  rules:
    - host: money-tracker.fitrie-server.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 81
          - path: /backend-api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
